--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -94,6 +94,7 @@ $highlightColour: #BD3212;
 		.description {
 			color: #999;
 			font-size: 0.9125em;
+			font-weight: 200;
 			line-height: 1.3em;
 			margin-top: 0;
 			text-align: left;
@@ -104,16 +105,6 @@ $highlightColour: #BD3212;
 		color: $highlightColour;
 	}
 }
-
-
-
-// #portfolio .project.full-screen {
-// 	height: 100%;
-// 	transform: translate3d(0%,0%,0) scale3d(1,1,1);
-// 	position: absolute;
-// 	width: 100%;
-// 	z-index: 100;
-// }
 
 
 /* ------------------------------------------------ */
