--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -12,10 +12,14 @@ $highlightColour: #BD3212;
 /* PROJECTS SECTION */
 #portfolio {
 	font-family: Helvetica Neue, Helvetica, sans-serif;
-	padding: 2%;
+	padding: 0 1em 2em 1em;
+
+	#projects {
+		margin-top: 3em;
+	}
 	
 	.project {
-		margin: 3em auto;
+		margin: 3em auto 2em auto;
 		max-width: 500px;
 		text-align: center;
 		@include transition(transform 0.5s ease);
@@ -71,16 +75,6 @@ $highlightColour: #BD3212;
 			width: 100%;
 		}
 
-		// img.grayscale {
-		// 	filter: gray;
-		// 	-webkit-filter: grayscale(100%); /* Safari 6+ */
-		// 	-moz-filter: grayscale(100%);
-		// 	-ms-filter: grayscale(100%);
-		// 	filter: grayscale(100%);
-		// 	// filter: url(greyscale.svg#greyscale);
-		//     // filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+ */
-		// }
-
 		img.visible,
 		.background-image.visible {
 			opacity: 1;
@@ -112,11 +106,12 @@ $highlightColour: #BD3212;
 /* ------------------------------------------------ */
 @media screen and (min-width: $webViewWidth) {
 	#portfolio #projects {
+		margin-top: 2.5em;
 		text-align: center;
 
 		.project {
 			display: inline-block;
-			margin: 3em 1em;
+			margin: 1em;
 			max-width: 250px;
 			text-align: left;
 		}
