--- a/css/main.css
+++ b/css/main.css
@@ -618,13 +618,15 @@ table {
 /* line 13, ../sass/_base.scss */
 #portfolio {
   font-family: Helvetica Neue, Helvetica, sans-serif;
+  margin: 0 auto;
+  max-width: 900px;
   padding: 0 1em 2em 1em;
 }
-/* line 17, ../sass/_base.scss */
+/* line 19, ../sass/_base.scss */
 #portfolio #projects {
   margin-top: 3em;
 }
-/* line 21, ../sass/_base.scss */
+/* line 23, ../sass/_base.scss */
 #portfolio .project {
   margin: 3em auto 2em auto;
   max-width: 500px;
@@ -635,12 +637,12 @@ table {
   transition: transform 0.5s ease;
   vertical-align: top;
 }
-/* line 28, ../sass/_base.scss */
+/* line 30, ../sass/_base.scss */
 #portfolio .project .header {
   margin: 0;
   padding: 0;
 }
-/* line 32, ../sass/_base.scss */
+/* line 34, ../sass/_base.scss */
 #portfolio .project .header h2 {
   color: #343434;
   font-size: 1.05em;
@@ -653,20 +655,20 @@ table {
   -o-transition: color 0.3s ease;
   transition: color 0.3s ease;
 }
-/* line 41, ../sass/_base.scss */
+/* line 43, ../sass/_base.scss */
 #portfolio .project .header h2 .social {
   float: right;
   text-transform: lowercase;
 }
-/* line 45, ../sass/_base.scss */
+/* line 47, ../sass/_base.scss */
 #portfolio .project .header h2 .social a {
   text-decoration: none;
 }
-/* line 49, ../sass/_base.scss */
+/* line 51, ../sass/_base.scss */
 #portfolio .project .header h2 .social a:hover {
   color: #bd3212;
 }
-/* line 57, ../sass/_base.scss */
+/* line 59, ../sass/_base.scss */
 #portfolio .project img,
 #portfolio .project .background-image {
   -webkit-border-radius: 5px;
@@ -686,17 +688,17 @@ table {
   transition: -webkit-filter 0.5s linear, opacity 0.4s ease, transform 0.5s ease;
   width: 100%;
 }
-/* line 79, ../sass/_base.scss */
+/* line 81, ../sass/_base.scss */
 #portfolio .project img.visible,
 #portfolio .project .background-image.visible {
   opacity: 1;
 }
-/* line 84, ../sass/_base.scss */
+/* line 86, ../sass/_base.scss */
 #portfolio .project img:hover,
 #portfolio .project .background-image:hover {
   transform: scale(1.025);
 }
-/* line 88, ../sass/_base.scss */
+/* line 90, ../sass/_base.scss */
 #portfolio .project .description {
   color: #999;
   font-size: 0.9125em;
@@ -705,7 +707,7 @@ table {
   margin-top: 0;
   text-align: left;
 }
-/* line 98, ../sass/_base.scss */
+/* line 100, ../sass/_base.scss */
 #portfolio .project:hover h2 {
   color: #bd3212;
 }
@@ -714,19 +716,19 @@ table {
 /* MEDIA QUERIES
 /* ------------------------------------------------ */
 @media screen and (min-width: 600px) {
-  /* line 108, ../sass/_base.scss */
+  /* line 110, ../sass/_base.scss */
   #portfolio #projects {
     margin-top: 2.5em;
     text-align: center;
   }
-  /* line 112, ../sass/_base.scss */
+  /* line 114, ../sass/_base.scss */
   #portfolio #projects .project {
     display: inline-block;
     margin: 1em;
     max-width: 250px;
     text-align: left;
   }
-  /* line 119, ../sass/_base.scss */
+  /* line 121, ../sass/_base.scss */
   #portfolio #projects img {
     background-position: center;
   }
