--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -12,6 +12,8 @@ $highlightColour: #BD3212;
 /* PROJECTS SECTION */
 #portfolio {
 	font-family: Helvetica Neue, Helvetica, sans-serif;
+	margin: 0 auto;
+	max-width: 900px;
 	padding: 0 1em 2em 1em;
 
 	#projects {
