new fonts. fixed some oddly broken sass variables.

--- a/css/main.css
+++ b/css/main.css
@@ -615,18 +615,18 @@ table {
 }
 
 /* PROJECTS SECTION */
-/* line 13, ../sass/_base.scss */
+/* line 10, ../sass/_base.scss */
 #portfolio {
-  font-family: Helvetica Neue, Helvetica, sans-serif;
+  font-family: 'Unica-Pro', 'Helvetica Neue', 'Helvetica', sans-serif;
   margin: 0 auto;
   max-width: 900px;
   padding: 0 1em 2em 1em;
 }
-/* line 19, ../sass/_base.scss */
+/* line 16, ../sass/_base.scss */
 #portfolio #projects {
   margin-top: 3em;
 }
-/* line 23, ../sass/_base.scss */
+/* line 20, ../sass/_base.scss */
 #portfolio .project {
   margin: 3em auto 2em auto;
   max-width: 500px;
@@ -637,14 +637,15 @@ table {
   transition: transform 0.5s ease;
   vertical-align: top;
 }
-/* line 30, ../sass/_base.scss */
+/* line 27, ../sass/_base.scss */
 #portfolio .project .header {
   margin: 0;
   padding: 0;
 }
-/* line 34, ../sass/_base.scss */
+/* line 31, ../sass/_base.scss */
 #portfolio .project .header h2 {
   color: #343434;
+  font-family: 'Unica-W1G', 'Helvetica Neue', 'Helvetica', sans-serif;
   font-size: 1.05em;
   font-weight: 200;
   margin-bottom: 0;
@@ -655,20 +656,20 @@ table {
   -o-transition: color 0.3s ease;
   transition: color 0.3s ease;
 }
-/* line 43, ../sass/_base.scss */
+/* line 41, ../sass/_base.scss */
 #portfolio .project .header h2 .social {
   float: right;
   text-transform: lowercase;
 }
-/* line 47, ../sass/_base.scss */
+/* line 45, ../sass/_base.scss */
 #portfolio .project .header h2 .social a {
   text-decoration: none;
 }
-/* line 51, ../sass/_base.scss */
+/* line 49, ../sass/_base.scss */
 #portfolio .project .header h2 .social a:hover {
   color: #bd3212;
 }
-/* line 59, ../sass/_base.scss */
+/* line 57, ../sass/_base.scss */
 #portfolio .project img,
 #portfolio .project .background-image {
   -webkit-border-radius: 5px;
@@ -682,23 +683,23 @@ table {
   margin: 2px 0 6px 0;
   max-height: 250px;
   opacity: 0;
-  -webkit-transition: -webkit-transform 0.5s ease;
-  -moz-transition: -moz-transform 0.5s ease;
-  -o-transition: -o-transform 0.5s ease;
-  transition: transform 0.5s ease;
+  -webkit-transition: -webkit-transform 0.3s ease;
+  -moz-transition: -moz-transform 0.3s ease;
+  -o-transition: -o-transform 0.3s ease;
+  transition: transform 0.3s ease;
   width: 100%;
 }
-/* line 77, ../sass/_base.scss */
+/* line 75, ../sass/_base.scss */
 #portfolio .project img.visible,
 #portfolio .project .background-image.visible {
   opacity: 1;
 }
-/* line 82, ../sass/_base.scss */
+/* line 80, ../sass/_base.scss */
 #portfolio .project img:hover,
 #portfolio .project .background-image:hover {
   transform: scale(1.025);
 }
-/* line 86, ../sass/_base.scss */
+/* line 84, ../sass/_base.scss */
 #portfolio .project .description {
   color: #999;
   font-size: 0.9125em;
@@ -711,11 +712,11 @@ table {
   -o-transition: color 0.4s ease;
   transition: color 0.4s ease;
 }
-/* line 97, ../sass/_base.scss */
+/* line 95, ../sass/_base.scss */
 #portfolio .project:hover h2 {
   color: #bd3212;
 }
-/* line 101, ../sass/_base.scss */
+/* line 99, ../sass/_base.scss */
 #portfolio .project:hover .description {
   color: #343434;
 }
@@ -724,19 +725,19 @@ table {
 /* MEDIA QUERIES
 /* ------------------------------------------------ */
 @media screen and (min-width: 600px) {
-  /* line 111, ../sass/_base.scss */
+  /* line 109, ../sass/_base.scss */
   #portfolio #projects {
     margin-top: 2.5em;
     text-align: center;
   }
-  /* line 115, ../sass/_base.scss */
+  /* line 113, ../sass/_base.scss */
   #portfolio #projects .project {
     display: inline-block;
     margin: 1em;
     max-width: 250px;
     text-align: left;
   }
-  /* line 122, ../sass/_base.scss */
+  /* line 120, ../sass/_base.scss */
   #portfolio #projects img {
     background-position: center;
   }
@@ -751,11 +752,12 @@ table {
 /* line 14, ../sass/_header-nav.scss */
 #portfolio header .title {
   color: #343434;
-  font-family: Garamond, Baskerville, serif;
+  font-family: 'Unica-W1G', 'Baskerville', 'Garamond', serif;
+  font-size: 2.5em;
   font-weight: 200;
   margin-bottom: 0;
 }
-/* line 21, ../sass/_header-nav.scss */
+/* line 22, ../sass/_header-nav.scss */
 #portfolio header h3 {
   font-size: 0.9125em;
   font-weight: 400;
@@ -763,35 +765,35 @@ table {
   margin-top: -5px;
 }
 
-/* line 29, ../sass/_header-nav.scss */
+/* line 30, ../sass/_header-nav.scss */
 #portfolio .main-nav ul {
   margin-top: 3px;
   padding-left: 0;
 }
-/* line 33, ../sass/_header-nav.scss */
+/* line 34, ../sass/_header-nav.scss */
 #portfolio .main-nav ul li {
   border-left: 1px solid #969696;
   display: inline-block;
   padding: 0 3px 0 5px;
 }
-/* line 38, ../sass/_header-nav.scss */
+/* line 39, ../sass/_header-nav.scss */
 #portfolio .main-nav ul li a {
   color: #969696;
   font-weight: 200;
   text-decoration: none;
   transition: color 0.2s ease;
 }
-/* line 45, ../sass/_header-nav.scss */
+/* line 46, ../sass/_header-nav.scss */
 #portfolio .main-nav ul li a:hover {
   color: #bd3212;
   text-decoration: none;
 }
-/* line 52, ../sass/_header-nav.scss */
+/* line 53, ../sass/_header-nav.scss */
 #portfolio .main-nav ul li:first-child {
   border-left: none;
 }
 
-/* line 57, ../sass/_header-nav.scss */
+/* line 58, ../sass/_header-nav.scss */
 #portfolio .contact-nav {
   left: 50%;
   margin-left: -60px;
@@ -799,7 +801,7 @@ table {
   position: absolute;
   width: 120px;
 }
-/* line 64, ../sass/_header-nav.scss */
+/* line 65, ../sass/_header-nav.scss */
 #portfolio .contact-nav .contact {
   font-weight: 200;
   -webkit-transition: color 0.5s ease;
@@ -807,12 +809,12 @@ table {
   -o-transition: color 0.5s ease;
   transition: color 0.5s ease;
 }
-/* line 69, ../sass/_header-nav.scss */
+/* line 70, ../sass/_header-nav.scss */
 #portfolio .contact-nav .arrow {
   font-size: 0.6125em;
   vertical-align: middle;
 }
-/* line 75, ../sass/_header-nav.scss */
+/* line 76, ../sass/_header-nav.scss */
 #portfolio .contact-nav ul {
   margin: 0;
   max-height: 0;
@@ -823,16 +825,16 @@ table {
   -o-transition: max-height 0.5s linear;
   transition: max-height 0.5s linear;
 }
-/* line 83, ../sass/_header-nav.scss */
+/* line 84, ../sass/_header-nav.scss */
 #portfolio .contact-nav ul li {
   display: inline-block;
   padding: 0 1px;
 }
-/* line 87, ../sass/_header-nav.scss */
+/* line 88, ../sass/_header-nav.scss */
 #portfolio .contact-nav ul li a {
   text-decoration: none;
 }
-/* line 91, ../sass/_header-nav.scss */
+/* line 92, ../sass/_header-nav.scss */
 #portfolio .contact-nav ul li i {
   color: #969696;
   color: #BCBCBC;
@@ -841,33 +843,33 @@ table {
   -o-transition: color 0.5s ease;
   transition: color 0.5s ease;
 }
-/* line 97, ../sass/_header-nav.scss */
+/* line 98, ../sass/_header-nav.scss */
 #portfolio .contact-nav ul li i.fa-envelope-o:hover {
   color: #bd3212;
 }
-/* line 101, ../sass/_header-nav.scss */
+/* line 102, ../sass/_header-nav.scss */
 #portfolio .contact-nav ul li i.fa-twitter:hover {
   color: #55ACEE;
 }
-/* line 105, ../sass/_header-nav.scss */
+/* line 106, ../sass/_header-nav.scss */
 #portfolio .contact-nav ul li i.fa-tumblr:hover {
   color: #35465C;
 }
-/* line 109, ../sass/_header-nav.scss */
+/* line 110, ../sass/_header-nav.scss */
 #portfolio .contact-nav ul li i:visited {
   color: #969696;
   color: #BCBCBC;
 }
 
-/* line 117, ../sass/_header-nav.scss */
+/* line 118, ../sass/_header-nav.scss */
 #portfolio .contact-nav:hover {
   cursor: pointer;
 }
-/* line 120, ../sass/_header-nav.scss */
+/* line 121, ../sass/_header-nav.scss */
 #portfolio .contact-nav:hover .contact {
   color: #343434;
 }
-/* line 124, ../sass/_header-nav.scss */
+/* line 125, ../sass/_header-nav.scss */
 #portfolio .contact-nav:hover .contact .arrow {
   -webkit-transform: rotate(360deg);
   -moz-transform: rotate(360deg);
@@ -875,17 +877,17 @@ table {
   -o-transform: rotate(360deg);
   transform: rotate(360deg);
 }
-/* line 130, ../sass/_header-nav.scss */
+/* line 131, ../sass/_header-nav.scss */
 #portfolio .contact-nav:hover ul {
   max-height: 40px;
 }
 
-/* line 135, ../sass/_header-nav.scss */
+/* line 136, ../sass/_header-nav.scss */
 #portfolio .social-nav ul {
   padding-left: 0;
   text-align: center;
 }
-/* line 139, ../sass/_header-nav.scss */
+/* line 140, ../sass/_header-nav.scss */
 #portfolio .social-nav ul li {
   border: 1px solid lightblue;
   display: inline-block;
@@ -896,3 +898,16 @@ table {
 /* ------------------------------------------------ */
 /* MEDIA QUERIES
 /* ------------------------------------------------ */
+@font-face {
+  font-family: 'Unica-Pro';
+  src: url("../fonts/NeueHaasUnicaPro-Thin.otf"), url("../fonts/NeueHaasUnicaPro-Thin.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Unica-W1G';
+  src: url("../fonts/NeueHaasUnicaW1G-Thin.otf"), url("../fonts/NeueHaasUnicaW1G-Thin.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
