--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,11 +1,14 @@
 // VARIABLES
 $webViewWidth: 600px;
+$imgScaleSpeed: 0.3s;
+$imgHoverScale: 1.025;
+$highlightColour: #BD3212;
 
 
 
 /* PROJECTS SECTION */
 #portfolio {
-	font-family: Helvetica Neue, Helvetica, sans-serif;
+	font-family: 'Unica-Pro', 'Helvetica Neue', 'Helvetica', sans-serif;
 	margin: 0 auto;
 	max-width: 900px;
 	padding: 0 1em 2em 1em;
@@ -27,6 +30,7 @@ $webViewWidth: 600px;
 
 			h2 {
 				color: #343434;
+				font-family: 'Unica-W1G', 'Helvetica Neue', 'Helvetica', sans-serif;
 				font-size: 1.05em;
 				font-weight: 200;
 				margin-bottom: 0;
