--- a/sass/_header-nav.scss
+++ b/sass/_header-nav.scss
@@ -13,7 +13,8 @@ $contactHoverSpeed: 0.5s;
 
 	.title {
 		color: #343434;
-		font-family: Garamond, Baskerville, serif;
+		font-family: 'Unica-W1G', 'Baskerville', 'Garamond', serif;
+		font-size: 2.5em;
 		font-weight: 200;
 		margin-bottom: 0;
 	}
