--- a/css/main.css
+++ b/css/main.css
@@ -617,7 +617,7 @@ table {
 /* PROJECTS SECTION */
 /* line 10, ../sass/_base.scss */
 #portfolio {
-  font-family: 'Unica-Pro', 'Helvetica Neue', 'Helvetica', sans-serif;
+  font-family: 'Unica-W1G', 'Helvetica Neue', 'Helvetica', sans-serif;
   margin: 0 auto;
   max-width: 900px;
   padding: 0 1em 2em 1em;
@@ -645,7 +645,7 @@ table {
 /* line 31, ../sass/_base.scss */
 #portfolio .project .header h2 {
   color: #343434;
-  font-family: 'Unica-W1G', 'Helvetica Neue', 'Helvetica', sans-serif;
+  font-family: 'Helvetica Neue', 'Helvetica', sans-serif;
   font-size: 1.05em;
   font-weight: 200;
   margin-bottom: 0;
@@ -701,9 +701,9 @@ table {
 }
 /* line 84, ../sass/_base.scss */
 #portfolio .project .description {
-  color: #999;
+  color: #646464;
   font-size: 0.9125em;
-  font-weight: 200;
+  font-weight: 400;
   line-height: 1.3em;
   margin-top: 0;
   text-align: left;
@@ -718,7 +718,7 @@ table {
 }
 /* line 99, ../sass/_base.scss */
 #portfolio .project:hover .description {
-  color: #343434;
+  color: #2C2C2C;
 }
 
 /* ------------------------------------------------ */
