--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -8,7 +8,6 @@ $highlightColour: #BD3212;
 
 /* PROJECTS SECTION */
 #portfolio {
-	font-family: 'Unica-W1G', 'Helvetica Neue', 'Helvetica', sans-serif;
 	margin: 0 auto;
 	max-width: 900px;
 	padding: 0 1em 2em 1em;
@@ -82,9 +81,11 @@ $highlightColour: #BD3212;
 		}
 
 		.description {
-			color: #646464;
+			color: $subtextColour;
+			// font-family: 'Unica-W1G', 'Helvetica Neue', 'Helvetica', sans-serif;
+			font-family: 'Georgia', serif;
 			font-size: 0.9125em;
-			font-weight: 400;
+			font-weight: 200;
 			line-height: 1.3em;
 			margin-top: 0;
 			text-align: left;
