--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,19 @@
+// VARIABLES
+$webViewWidth: 600px;
+$imgScaleSpeed: 0.3s;
+$imgHoverScale: 1.025;
+$highlightColour: #BD3212;
+
+$titletextColour: #343434;
+$subtextColour: #969696;
+
+
+$navColour: #969696;
+$navHoverColour: orchid;
+$navHoverSpeed: 0.5s;
+$contactHoverSpeed: 0.5s;
+
+
 // IMPORTS
 @import 'compass/css3';
 @import 'html5-boilerplate';
