description text to garamond

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -83,8 +83,8 @@ $highlightColour: #BD3212;
 		.description {
 			color: $subtextColour;
 			// font-family: 'Unica-W1G', 'Helvetica Neue', 'Helvetica', sans-serif;
-			font-family: 'Georgia', serif;
-			font-size: 0.9125em;
+			font-family: 'Garamond', serif;
+			font-size: 1.0125em;
 			font-weight: 200;
 			line-height: 1.3em;
 			margin-top: 0;
