--- a/css/main.css
+++ b/css/main.css
@@ -701,7 +701,7 @@ table {
 /* line 83, ../sass/_base.scss */
 #portfolio .project .description {
   color: #969696;
-  font-family: 'Georgia', serif;
+  font-family: 'Garamond', 'Georgia', serif;
   font-size: 0.9125em;
   font-weight: 200;
   line-height: 1.3em;
