--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */
-/* line 7, ../sass/_html5-boilerplate.scss */
+/* line 3, ../sass/_html5-boilerplate.scss */
 html,
 button,
 input,
@@ -36,7 +36,7 @@ hr {
   padding: 0;
 }
 
-/* line 38, ../sass/_html5-boilerplate.scss */
+/* line 35, ../sass/_html5-boilerplate.scss */
 audio,
 canvas,
 img,
@@ -71,7 +71,7 @@ textarea {
 /**
  * Correct `block` display not defined in IE 6/7/8/9 and Firefox 3.
  */
-/* line 22, ../sass/_html5-normalize.scss */
+/* line 11, ../sass/_html5-normalize.scss */
 article,
 aside,
 details,
@@ -90,7 +90,7 @@ summary {
 /**
  * Correct `inline-block` display not defined in IE 6/7/8/9 and Firefox 3.
  */
-/* line 32, ../sass/_html5-normalize.scss */
+/* line 30, ../sass/_html5-normalize.scss */
 audio,
 canvas,
 video {
@@ -141,7 +141,7 @@ html {
  * Address `font-family` inconsistency between `textarea` and other form
  * elements.
  */
-/* line 83, ../sass/_html5-normalize.scss */
+/* line 79, ../sass/_html5-normalize.scss */
 html,
 button,
 input,
@@ -172,7 +172,7 @@ a:focus {
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
  */
-/* line 112, ../sass/_html5-normalize.scss */
+/* line 111, ../sass/_html5-normalize.scss */
 a:active,
 a:hover {
   outline: 0;
@@ -233,7 +233,7 @@ abbr[title] {
 /**
  * Address style set to `bolder` in Firefox 3+, Safari 4/5, and Chrome.
  */
-/* line 169, ../sass/_html5-normalize.scss */
+/* line 168, ../sass/_html5-normalize.scss */
 b,
 strong {
   font-weight: bold;
@@ -275,7 +275,7 @@ mark {
 /**
  * Address margins set differently in IE 6/7.
  */
-/* line 210, ../sass/_html5-normalize.scss */
+/* line 209, ../sass/_html5-normalize.scss */
 p,
 pre {
   margin: 1em 0;
@@ -284,7 +284,7 @@ pre {
 /**
  * Correct font family set oddly in IE 6, Safari 4/5, and Chrome.
  */
-/* line 221, ../sass/_html5-normalize.scss */
+/* line 218, ../sass/_html5-normalize.scss */
 code,
 kbd,
 pre,
@@ -315,7 +315,7 @@ q {
 /**
  * Address `quotes` property not supported in Safari 4.
  */
-/* line 250, ../sass/_html5-normalize.scss */
+/* line 249, ../sass/_html5-normalize.scss */
 q:before,
 q:after {
   content: '';
@@ -333,7 +333,7 @@ small {
 /**
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
  */
-/* line 268, ../sass/_html5-normalize.scss */
+/* line 267, ../sass/_html5-normalize.scss */
 sub,
 sup {
   font-size: 75%;
@@ -358,7 +358,7 @@ sub {
 /**
  * Address margins set differently in IE 6/7.
  */
-/* line 294, ../sass/_html5-normalize.scss */
+/* line 291, ../sass/_html5-normalize.scss */
 dl,
 menu,
 ol,
@@ -374,7 +374,7 @@ dd {
 /**
  * Address paddings set differently in IE 6/7.
  */
-/* line 308, ../sass/_html5-normalize.scss */
+/* line 306, ../sass/_html5-normalize.scss */
 menu,
 ol,
 ul {
@@ -384,7 +384,7 @@ ul {
 /**
  * Correct list images handled incorrectly in IE 7.
  */
-/* line 317, ../sass/_html5-normalize.scss */
+/* line 316, ../sass/_html5-normalize.scss */
 nav ul,
 nav ol {
   list-style: none;
@@ -468,7 +468,7 @@ legend {
  *    and Chrome.
  * 3. Improve appearance and consistency in all browsers.
  */
-/* line 401, ../sass/_html5-normalize.scss */
+/* line 398, ../sass/_html5-normalize.scss */
 button,
 input,
 select,
@@ -487,7 +487,7 @@ textarea {
  * Address Firefox 3+ setting `line-height` on `input` using `!important` in
  * the UA stylesheet.
  */
-/* line 414, ../sass/_html5-normalize.scss */
+/* line 413, ../sass/_html5-normalize.scss */
 button,
 input {
   line-height: normal;
@@ -499,7 +499,7 @@ input {
  * Correct `button` style inheritance in Chrome, Safari 5+, and IE 6+.
  * Correct `select` style inheritance in Firefox 4+ and Opera.
  */
-/* line 426, ../sass/_html5-normalize.scss */
+/* line 425, ../sass/_html5-normalize.scss */
 button,
 select {
   text-transform: none;
@@ -514,7 +514,7 @@ select {
  * 4. Remove inner spacing in IE 7 without affecting normal text inputs.
  *    Known issue: inner spacing remains in IE 6.
  */
-/* line 443, ../sass/_html5-normalize.scss */
+/* line 440, ../sass/_html5-normalize.scss */
 button,
 html input[type="button"],
 input[type="reset"],
@@ -530,7 +530,7 @@ input[type="submit"] {
 /**
  * Re-set default cursor for disabled elements.
  */
-/* line 454, ../sass/_html5-normalize.scss */
+/* line 453, ../sass/_html5-normalize.scss */
 button[disabled],
 html input[disabled] {
   cursor: default;
@@ -542,7 +542,7 @@ html input[disabled] {
  * 3. Remove excess padding in IE 7.
  *    Known issue: excess padding remains in IE 6.
  */
-/* line 466, ../sass/_html5-normalize.scss */
+/* line 465, ../sass/_html5-normalize.scss */
 input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box;
@@ -574,7 +574,7 @@ input[type="search"] {
  * Remove inner padding and search cancel button in Safari 5 and Chrome
  * on OS X.
  */
-/* line 492, ../sass/_html5-normalize.scss */
+/* line 491, ../sass/_html5-normalize.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
@@ -583,7 +583,7 @@ input[type="search"]::-webkit-search-decoration {
 /**
  * Remove inner padding and border in Firefox 3+.
  */
-/* line 501, ../sass/_html5-normalize.scss */
+/* line 500, ../sass/_html5-normalize.scss */
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
@@ -630,9 +630,9 @@ table {
   margin: 3em auto 2em auto;
   max-width: 500px;
   text-align: center;
-  -webkit-transition: -webkit-transform 0.5s ease;
   -moz-transition: -moz-transform 0.5s ease;
   -o-transition: -o-transform 0.5s ease;
+  -webkit-transition: -webkit-transform 0.5s ease;
   transition: transform 0.5s ease;
   vertical-align: top;
 }
@@ -650,9 +650,9 @@ table {
   margin-bottom: 0;
   text-align: left;
   text-transform: uppercase;
-  -webkit-transition: color 0.3s ease;
   -moz-transition: color 0.3s ease;
   -o-transition: color 0.3s ease;
+  -webkit-transition: color 0.3s ease;
   transition: color 0.3s ease;
 }
 /* line 40, ../sass/_base.scss */
@@ -666,57 +666,72 @@ table {
 }
 /* line 48, ../sass/_base.scss */
 #portfolio .project .header h2 .social a:hover {
-  color: #bd3212;
+  color: #BD3212;
 }
-/* line 56, ../sass/_base.scss */
+/* line 55, ../sass/_base.scss */
 #portfolio .project img,
 #portfolio .project .background-image {
-  -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
+  -webkit-border-radius: 5px;
   border-radius: 5px;
-  -webkit-box-shadow: 1px 1px 1px #999999;
-  -moz-box-shadow: 1px 1px 1px #999999;
-  box-shadow: 1px 1px 1px #999999;
+  -moz-box-shadow: 1px 1px 1px #999;
+  -webkit-box-shadow: 1px 1px 1px #999;
+  box-shadow: 1px 1px 1px #999;
   margin: 2px 0 6px 0;
   max-height: 250px;
-  opacity: 0;
-  -webkit-transition: -webkit-transform 0.3s ease;
   -moz-transition: -moz-transform 0.3s ease;
   -o-transition: -o-transform 0.3s ease;
+  -webkit-transition: -webkit-transform 0.3s ease;
   transition: transform 0.3s ease;
   width: 100%;
 }
-/* line 74, ../sass/_base.scss */
+/* line 73, ../sass/_base.scss */
 #portfolio .project img.visible,
 #portfolio .project .background-image.visible {
   opacity: 1;
 }
-/* line 79, ../sass/_base.scss */
+/* line 78, ../sass/_base.scss */
 #portfolio .project img:hover,
 #portfolio .project .background-image:hover {
   transform: scale(1.025);
 }
 /* line 83, ../sass/_base.scss */
+#portfolio .project .youtube-embed-container {
+  height: 0;
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  padding-top: 25px;
+  position: relative;
+  width: 100%;
+}
+/* line 91, ../sass/_base.scss */
+#portfolio .project .youtube-embed-container iframe {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+/* line 100, ../sass/_base.scss */
 #portfolio .project .description {
   color: #969696;
   font-family: 'Garamond', serif;
-  font-size: 0.975em;
+  font-size: 0.915em;
   font-weight: 200;
   line-height: 1.25em;
   margin-top: 0;
   text-align: left;
-  -webkit-transition: color 0.4s ease;
   -moz-transition: color 0.4s ease;
   -o-transition: color 0.4s ease;
+  -webkit-transition: color 0.4s ease;
   transition: color 0.4s ease;
 }
-/* line 96, ../sass/_base.scss */
+/* line 113, ../sass/_base.scss */
 #portfolio .project:hover h2 {
-  color: #bd3212;
+  color: #BD3212;
 }
-/* line 100, ../sass/_base.scss */
+/* line 117, ../sass/_base.scss */
 #portfolio .project:hover .description {
   color: #2C2C2C;
 }
@@ -725,19 +740,19 @@ table {
 /* MEDIA QUERIES
 /* ------------------------------------------------ */
 @media screen and (min-width: 600px) {
-  /* line 110, ../sass/_base.scss */
+  /* line 127, ../sass/_base.scss */
   #portfolio #projects {
     margin-top: 2.5em;
     text-align: center;
   }
-  /* line 114, ../sass/_base.scss */
+  /* line 131, ../sass/_base.scss */
   #portfolio #projects .project {
     display: inline-block;
     margin: 1em;
     max-width: 250px;
     text-align: left;
   }
-  /* line 121, ../sass/_base.scss */
+  /* line 138, ../sass/_base.scss */
   #portfolio #projects img {
     background-position: center;
   }
@@ -785,7 +800,7 @@ table {
 }
 /* line 40, ../sass/_header-nav.scss */
 #portfolio .main-nav ul li a:hover {
-  color: #bd3212;
+  color: #BD3212;
   text-decoration: none;
 }
 /* line 47, ../sass/_header-nav.scss */
@@ -804,9 +819,9 @@ table {
 /* line 59, ../sass/_header-nav.scss */
 #portfolio .contact-nav .contact {
   font-weight: 200;
-  -webkit-transition: color 0.5s ease;
   -moz-transition: color 0.5s ease;
   -o-transition: color 0.5s ease;
+  -webkit-transition: color 0.5s ease;
   transition: color 0.5s ease;
 }
 /* line 64, ../sass/_header-nav.scss */
@@ -820,9 +835,9 @@ table {
   max-height: 0;
   overflow-y: hidden;
   padding: 0;
-  -webkit-transition: max-height 0.5s linear;
   -moz-transition: max-height 0.5s linear;
   -o-transition: max-height 0.5s linear;
+  -webkit-transition: max-height 0.5s linear;
   transition: max-height 0.5s linear;
 }
 /* line 78, ../sass/_header-nav.scss */
@@ -838,14 +853,14 @@ table {
 #portfolio .contact-nav ul li i {
   color: #969696;
   color: #BCBCBC;
-  -webkit-transition: color 0.5s ease;
   -moz-transition: color 0.5s ease;
   -o-transition: color 0.5s ease;
+  -webkit-transition: color 0.5s ease;
   transition: color 0.5s ease;
 }
 /* line 92, ../sass/_header-nav.scss */
 #portfolio .contact-nav ul li i.fa-envelope-o:hover {
-  color: #bd3212;
+  color: #BD3212;
 }
 /* line 96, ../sass/_header-nav.scss */
 #portfolio .contact-nav ul li i.fa-twitter:hover {
@@ -871,10 +886,9 @@ table {
 }
 /* line 119, ../sass/_header-nav.scss */
 #portfolio .contact-nav:hover .contact .arrow {
-  -webkit-transform: rotate(360deg);
   -moz-transform: rotate(360deg);
   -ms-transform: rotate(360deg);
-  -o-transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
   transform: rotate(360deg);
 }
 /* line 125, ../sass/_header-nav.scss */
@@ -904,7 +918,6 @@ table {
   font-weight: normal;
   font-style: normal;
 }
-
 @font-face {
   font-family: 'Unica-W1G';
   src: url("../fonts/NeueHaasUnicaW1G-Thin.otf"), url("../fonts/NeueHaasUnicaW1G-Thin.ttf");
