--- a/bridgewater/css/main.css
+++ b/bridgewater/css/main.css
@@ -1,392 +1,1 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  font-size: 100%;
-  vertical-align: baseline;
-}
-
-html {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
-
-q, blockquote {
-  quotes: none;
-}
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
-
-a img {
-  border: none;
-}
-
-article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
-  display: block;
-}
-
-.article h1, .article h2, .article h3, .article h4, .article p {
-  font-family: 'Open Sans', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-.article h3 {
-  font-size: 20px;
-  line-height: 1.1em;
-  margin-bottom: 8px;
-}
-.article p {
-  font-size: 14px;
-  font-weight: 400;
-  color: #343434;
-  letter-spacing: 0.005em;
-  line-height: 1.35em;
-}
-.article img {
-  width: 100%;
-}
-.article .clear-float {
-  clear: both;
-}
-.article .button {
-  background-color: #77b044;
-  border-radius: 3px;
-  color: white;
-  font-size: 13px;
-  padding: 9px 10px 7px;
-  text-decoration: none;
-}
-.article .highlight {
-  color: #77b044 !important;
-}
-
-#nav-bar {
-  background-color: #77b044;
-  height: 25px;
-  padding: 7px 0;
-  position: fixed;
-  width: 100%;
-  z-index: 999;
-}
-#nav-bar .title {
-  color: #FFF;
-  float: left;
-  font-size: 1.35em;
-  margin: 3px 0 0 5%;
-  text-transform: uppercase;
-}
-#nav-bar #social-buttons {
-  margin-right: 0.5rem;
-  text-align: right;
-}
-#nav-bar #social-buttons .icon {
-  display: inline-block;
-  height: 25px;
-  text-align: center;
-  width: 25px;
-}
-
-.hero-wrap {
-  position: relative;
-}
-.hero-wrap#hero-01 {
-  background: url(../img/POcommunity.png);
-  background-attachment: fixed;
-  background-position: center center;
-  background-size: cover;
-}
-.hero-wrap#hero-01 .title {
-  bottom: auto;
-  left: 5%;
-  position: absolute;
-  top: 12%;
-}
-.hero-wrap#hero-02 {
-  background: url(../img/powerplant.jpg);
-  background-attachment: fixed;
-  background-position: center center;
-  background-size: cover;
-}
-.hero-wrap#hero-02 h1.secondary {
-  letter-spacing: 0px;
-}
-.hero-wrap#hero-03 {
-  background: url(../img/IGP5963_1280a.jpg);
-  background-attachment: fixed;
-  background-position: center center;
-  background-size: cover;
-}
-.hero-wrap#hero-04 {
-  background: url(../img/IGP6249_1280a.jpg);
-  background-attachment: fixed;
-  background-position: center center;
-  background-size: cover;
-}
-.hero-wrap .inner {
-  min-height: 600px;
-  position: relative;
-}
-.hero-wrap .inner .title {
-  bottom: 5%;
-  left: 5%;
-  position: absolute;
-}
-.hero-wrap .inner .title > h1 {
-  color: #FFF;
-  font-size: 3em;
-  text-shadow: 1px 1px 2px #333;
-  text-transform: uppercase;
-}
-.hero-wrap .inner .title > h1.secondary {
-  letter-spacing: 2.5px;
-}
-.hero-wrap .inner .title > h1.primary {
-  color: #77b044;
-  font-size: 3.5em;
-  font-weight: 800;
-}
-.hero-wrap .inner .title > h2 {
-  color: #FFF;
-  font-size: 1em;
-  text-transform: uppercase;
-}
-
-@media screen and (min-width: 700px) {
-  .hero-wrap .inner {
-    min-height: 600px;
-  }
-  .hero-wrap .inner .title > h1 {
-    font-size: 5em;
-  }
-  .hero-wrap .inner .title > h1.secondary {
-    letter-spacing: 1px;
-  }
-  .hero-wrap .inner .title > h1.primary {
-    font-size: 5.5em;
-  }
-  .hero-wrap .inner .title > h2 {
-    font-size: 2em;
-  }
-}
-.pull-quote {
-  padding: 7% 0;
-  margin: 0 auto;
-  max-width: 80%;
-}
-.pull-quote span.drop-cap {
-  color: #d9d9d9;
-  font-size: 2.75em;
-  line-height: 60px;
-  margin-left: -35px;
-  padding: 0 10px 0 0;
-}
-.pull-quote .quote {
-  color: #d9d9d9;
-  font-family: Georgia, serif;
-  font-size: 1.7em;
-  letter-spacing: 0.01em;
-  line-height: 1.35em;
-  margin-bottom: 10px;
-  text-align: center;
-}
-.pull-quote .attribution {
-  color: #d9d9d9;
-  font-size: 0.9em;
-  text-align: right;
-}
-
-@media screen and (min-width: 700px) {
-  .pull-quote {
-    padding-bottom: 2%;
-  }
-  .pull-quote span.drop-cap {
-    margin-left: -42px;
-  }
-  .pull-quote .quote {
-    font-size: 1.8em;
-    letter-spacing: 0.01em;
-    line-height: 1.2em;
-    margin: 0 10px 0 40px;
-  }
-}
-.case-study {
-  box-shadow: 2px 0px 20px #e9e9e9;
-  margin: 5rem auto;
-  padding: 2rem 0.75rem;
-}
-.case-study > h3 {
-  margin-bottom: 0.5rem;
-}
-.case-study > h3 .bold {
-  font-weight: 800;
-  text-transform: uppercase;
-}
-.case-study .text .button-wrap {
-  margin-top: 1.75rem;
-  text-align: center;
-}
-
-@media screen and (min-width: 700px) {
-  .case-study h3 {
-    padding: 0 0.75rem;
-  }
-  .case-study .text > p {
-    padding: 0 0.75rem;
-  }
-  .case-study .media {
-    margin-right: 1rem;
-  }
-  .case-study .float-left {
-    float: left;
-    max-width: 400px;
-    width: 30%;
-  }
-}
-.card {
-  border-radius: 3px;
-  box-shadow: 1px 1px 10px #e9e9e9;
-  display: flex;
-  margin: 1rem;
-}
-.card .media.float-left {
-  margin-right: 10px;
-}
-.card .text {
-  padding: 0.5rem 0.25rem;
-}
-.card .text > h4 {
-  font-size: 0.8rem;
-  text-transform: uppercase;
-}
-.card .text > h2 {
-  color: #d9d9d9;
-  font-size: 1.25rem;
-  margin-bottom: 5px;
-}
-.card .text .learn-more {
-  float: right;
-  margin: 8px 5px;
-}
-.card .text .learn-more > a {
-  color: #77b044;
-}
-
-.card.town {
-  border-left: 5px solid #00aef0;
-}
-.card.town .text > h4 {
-  color: #00aef0;
-}
-
-.card.residents {
-  border-left: 5px solid #f99d1a;
-}
-.card.residents .text > h4 {
-  color: #f99d1a;
-}
-
-.card.business {
-  border-left: 5px solid #8a268f;
-}
-.card.business .text > h4 {
-  color: #8a268f;
-}
-
-@media screen and (min-width: 700px) {
-  .card {
-    max-width: 45%;
-    float: left;
-  }
-}
-.content {
-  margin-bottom: 5rem;
-}
-.content .text-column {
-  margin: 0 auto;
-  width: 95%;
-}
-.content .text-column > p {
-  margin: 4% auto;
-}
-.content .media-wrap {
-  margin: 12% auto;
-  max-width: 95%;
-  position: relative;
-}
-.content .media-wrap .media {
-  position: relative;
-}
-.content .media-wrap .float-right {
-  float: right;
-  width: 48%;
-}
-.content .media-wrap .float-left {
-  float: left;
-  width: 48%;
-}
-.content .button-wrap {
-  margin-top: 3rem;
-  text-align: center;
-}
-.content .button-wrap > li {
-  display: inline-block;
-}
-
-@media screen and (min-width: 700px) {
-  .content .text-column {
-    margin: 0 auto;
-    max-width: 600px;
-  }
-  .content .text-column > p {
-    margin: 2rem auto;
-    line-height: 1.4rem;
-  }
-  .content .media-wrap {
-    margin: 0 auto;
-    max-width: 800px;
-  }
-  .content .media-wrap .embed-single-left,
-  .content .media-wrap .embed-single-right {
-    max-width: 350px;
-    min-width: 150px;
-    width: 30%;
-  }
-  .content .media-wrap .embed-single-left {
-    float: left;
-    margin: 0 20px 20px 0;
-  }
-  .content .media-wrap .embed-single-right {
-    float: right;
-    margin: 0 0 20px 20px;
-  }
-}
+a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;font-size:100%;vertical-align:baseline}html{line-height:1}ol,ul{list-style:none}table{border-collapse:collapse;border-spacing:0}caption,td,th{text-align:left;font-weight:400;vertical-align:middle}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:"";content:none}a img{border:none}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}.article a,.article h1,.article h2,.article h3,.article h4,.article p{font-family:Open Sans,HelveticaNeue,Helvetica Neue,Helvetica,Arial,sans-serif}.article h3{font-size:20px;line-height:1.1em;margin-bottom:8px}.article p{font-size:14px;font-weight:400;color:#343434;letter-spacing:.005em;line-height:1.35em}.article img{width:100%}.article .clear-float{clear:both}.article .button{background-color:#77b044;border-radius:3px;color:#fff;font-size:13px;padding:9px 10px 7px;text-decoration:none}.article .highlight{color:#77b044!important}#nav-bar{background-color:#77b044;height:25px;padding:7px 0;position:fixed;width:100%;z-index:1}#nav-bar .title{color:#fff;float:left;font-size:1.35em;margin:3px 0 0 5%;text-transform:uppercase}#nav-bar #social-buttons{margin-right:1.75rem;text-align:right}#nav-bar #social-buttons .icon{display:inline-block;height:25px;margin:0 2px;text-align:center;width:25px}.hero-wrap{position:relative}.hero-wrap#hero-01{background:url(../img/POcommunity.png);background-attachment:fixed;background-position:50%;background-size:cover}.hero-wrap#hero-01 .title{bottom:auto;left:5%;position:absolute;top:12%}.hero-wrap#hero-02{background:url(../img/powerplant.jpg);background-attachment:fixed;background-position:50%;background-size:cover}.hero-wrap#hero-02 .secondary{letter-spacing:0}.hero-wrap#hero-03{background:url(../img/IGP5963_1280a.jpg);background-attachment:fixed;background-position:50%;background-size:cover}.hero-wrap#hero-04{background:url(../img/IGP6249_1280a.jpg);background-attachment:fixed;background-position:50%;background-size:cover}.hero-wrap .inner{min-height:600px;position:relative}.hero-wrap .inner .title{bottom:5%;left:5%;position:absolute}.hero-wrap .inner .title>h1{color:#fff;font-size:3em;text-shadow:1px 1px 2px #333;text-transform:uppercase}.hero-wrap .inner .title>h1.secondary{letter-spacing:2.5px}.hero-wrap .inner .title>h1.primary{color:#77b044;font-size:3.5em;font-weight:800}.hero-wrap .inner .title>h2{color:#fff;font-size:1em;text-transform:uppercase}.pull-quote{padding:7% 0;margin:0 auto;max-width:80%}.pull-quote span.drop-cap{color:#d9d9d9;font-size:2.75em;line-height:60px;margin-left:-35px;padding:0 10px 0 0}.pull-quote .quote{color:#d9d9d9;font-family:Georgia,serif;font-size:1.7em;letter-spacing:.01em;line-height:1.35em;margin-bottom:10px;text-align:center}.pull-quote .attribution{color:#d9d9d9;font-size:.9em;text-align:right}.case-study{box-shadow:2px 0 20px #e9e9e9;margin:5rem auto;padding:2rem .75rem}.case-study>h3{margin-bottom:.5rem}.case-study>h3 .bold{font-weight:800;text-transform:uppercase}.case-study .text .button-wrap{margin-top:1.75rem;text-align:center}.card{border-radius:3px;box-shadow:1px 1px 10px #e9e9e9;display:flex;margin:1rem}.card .media.float-left{margin-right:10px}.card .text{padding:.5rem .25rem}.card .text>h4{font-size:.8rem;text-transform:uppercase}.card .text>h2{color:#d9d9d9;font-size:1.25rem;margin-bottom:5px}.card .text .learn-more{float:right;margin:8px 5px}.card .text .learn-more>a{color:#77b044}.card.town{border-left:5px solid #00aef0}.card.town .text>h4{color:#00aef0}.card.residents{border-left:5px solid #f99d1a}.card.residents .text>h4{color:#f99d1a}.card.business{border-left:5px solid #8a268f}.card.business .text>h4{color:#8a268f}.content{margin-bottom:5rem}.content .text-column{margin:0 auto;width:95%}.content .text-column>p{margin:4% auto}.content .media-wrap{margin:12% auto;max-width:95%;position:relative}.content .media-wrap .media{position:relative}.content .media-wrap .float-right{float:right;width:48%}.content .media-wrap .float-left{float:left;width:48%}.content .button-wrap{margin-top:3rem;text-align:center}.content .button-wrap>li{display:inline-block}@media screen and (orientation:portrait){.hero-wrap .inner{min-height:150vw}}@media screen and (min-width:750px) and (orientation:landscape){.hero-wrap#hero-01.secondary{letter-spacing:0}.hero-wrap#hero-02.secondary{font-size:4.5rem;letter-spacing:0}.hero-wrap .inner{min-height:600px}.hero-wrap .inner .title>h1{font-size:5em}.hero-wrap .inner .title>h1.secondary{letter-spacing:1px}.hero-wrap .inner .title>h1.primary{font-size:5.5em}.hero-wrap .inner .title>h2{font-size:2em}}@media screen and (min-width:750px){.pull-quote{padding-bottom:2%}.pull-quote span.drop-cap{margin-left:-42px}.pull-quote .quote{font-size:1.8em;letter-spacing:.01em;line-height:1.2em;margin:0 10px 0 40px}.case-study .text>p,.case-study h3{padding:0 .75rem}.case-study .media{margin-right:1rem}.case-study .float-left{float:left;max-width:400px;width:30%}.card{max-width:45%;float:left}.content .text-column{margin:0 auto;max-width:600px}.content .text-column>p{margin:2rem auto;line-height:1.4rem}.content .media-wrap{margin:0 auto;max-width:800px}.content .media-wrap .embed-single-left,.content .media-wrap .embed-single-right{max-width:350px;min-width:150px;width:30%}.content .media-wrap .embed-single-left{float:left;margin:0 20px 20px 0}.content .media-wrap .embed-single-right{float:right;margin:0 0 20px 20px}}
